# hmi_picovoice

./: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: hmi_picovoice_node.py
src/: porcupine_node.cpp  rhino_node.cpp
src/hmi_picovoice/: porcupine_node.py  server.py
