<?xml version="1.0"?>
<package format="3">
  <name>hmi_picovoice</name>
  <version>0.0.1</version>
  <description>HMI Wrapper for the Picovoice libraries</description>

  <maintainer email="petervdooren@outlook.com">Peter van Dooren</maintainer>

  <license>GNU 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>hmi</depend>
  <depend>rospy</depend>
</package>
