<?xml version="1.0"?>
<package format="2">
  <name>hmi_picovoice</name>
  <version>0.0.0</version>
  <description>
    Provides a hmi interface connecting to picovoice rhino speech recognition
  </description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>hmi</exec_depend>
  <exec_depend>picovoice_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
