<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hmi_picovoice</name>
  <version>0.0.0</version>
  <description>
    Provides a hmi interface connecting to picovoice rhino speech recognition
  </description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>hmi</exec_depend>
  <exec_depend>picovoice_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
